# diary-app

./: .env.example  .env.example.secure  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  design.md  docker-compose.yml  requirements.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  requirements-gemini.txt  requirements.txt
backend/app/ai/: gemini_service.py
frontend/: .eslintrc.json  jest.config.js  next.config.js  package.json  tailwind.config.ts  tsconfig.json
